# SMR-G4-Service

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 130a5b414f99_smr_g4_jobs_data.py  377d05734ad4_smr_g4_jobs_is_processing.py  6f9cd02fe235_smr_g4_jobs_data_2.py  d1fb71ee287a_initial_migration.py
app/: database.py  main.py  models.py  scheduler.py  schemas.py  settings.py
