[project]
name = "smr-g4-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.0",
    "greenlet>=3.2.3",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pyzmq>=27.0.0",
    "sqlalchemy>=2.0.41",
]
